--- a/index.html
+++ b/index.html
@@ -22,27 +22,28 @@
     <div class="profile">
       <img src="Images/josedominguez.jpg" alt="josedominguez">
       <h2>Hola.</h2>
-      <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+      <p>Soy Jose, un desarrollador de las Palmas de Gran Canaria y diseñador freelance a tiempo completo.</p>
+      <p>Adoro la programación y todo tipo de artes gráficos.</p>
     </div>
     <hr>
     <div class="skills">
       <h2>Mis Habilidades.</h2>
       <div class="skill-row">
         <img class="computer" src="Images/computer.png" alt="computer">
-        <h3>Lorem & Ipsum</h3>
-        <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+        <h3>Diseño y Desarrollo</h3>
+        <p>Llevo algunos años diseñando pixel-arts, dibujos de modo profesional y desarrollando código de manera autonoma.</p>
       </div>
       <div class="skill-row">
         <img class="chilies" src="Images/chillies.png" alt="chillies">
-        <h3>Lorem Ipsum Dolor</h3>
-        <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+        <h3>Poniendole sabor a tus encargos</h3>
+        <p>Como desarrollador, mi objetivo es que se plasme fielmente lo que mis clientes desean.</p>
       </div>
     </div>
     <hr>
     <div class="contactame">
-      <h2>Dame un toque</h2>
-      <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-      <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+      <h2>¡Dame un toque!</h2>
+      <h3>Si tienes algun encargo o pregunta, ni lo dudes. Ponte en contacto conmigo.</h3>
+      <p>Me comunicare contigo, a la mayor brevedad posible</p>
       <a class="btn" href="mailto:lp4elements@gmail.com">CONTACTAME</a>
     </div>
   </div>
@@ -58,3 +59,4 @@
 </body>
 
 </html>
+
