--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="top-container">
     <img class="top-cloud" src="Images/cloud.png" alt="cloud-image">
     <h1>Soy Jose Dominguez.</h1>
-    <p class="un">un <span class="pro">pro</span>gramador.</p>
+    <p class="un">Un <span class="pro">pro</span>gramador.</p>
     <img class="bottom-cloud" src="Images/cloud.png" alt="cloud-image">
     <img src="Images/mountain.png" alt="mountain-image">
   </div>
