--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
   <div class="top-container">
     <img class="top-cloud" src="Images/cloud.png" alt="cloud-image">
     <h1>Soy Jose Dominguez.</h1>
-    <p class="un">Un <span class="pro">pro</span>gramador.</p>
+    <h2>Un <span class="pro">pro</span>gramador.</h2>
     <img class="bottom-cloud" src="Images/cloud.png" alt="cloud-image">
     <img src="Images/mountain.png" alt="mountain-image">
   </div>
   <div class="middle-container">
     <div class="profile">
-      <img src="Images/josedominguez.jpg" alt="josedominguez">
+      <img src="Images/josedominguez.png" alt="josedominguez">
       <h2>Hola.</h2>
       <p>Soy Jose, un desarrollador de las Palmas de Gran Canaria y diseñador freelance a tiempo completo.</p>
       <p>Adoro la programación y todo tipo de artes gráficos.</p>
