--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="top-container">
     <img class="top-cloud" src="Images/cloud.png" alt="cloud-image">
     <h1>Soy Jose Dominguez.</h1>
-    <h2>Un <span class="pro">pro</span>gramador.</h2>
+    <h2>Programador <span class="diseñador">y diseñador</span> freelance.</h2>
     <img class="bottom-cloud" src="Images/cloud.png" alt="cloud-image">
     <img src="Images/mountain.png" alt="mountain-image">
   </div>
@@ -59,4 +59,3 @@
 </body>
 
 </html>
-
