--- a/index.html
+++ b/index.html
@@ -13,17 +13,16 @@
 <body>
   <div class="top-container">
     <img class="top-cloud" src="Images/cloud.png" alt="cloud-image">
-    <h1>Soy Jose Dominguez.</h1>
-    <h2>Programador <span class="diseñador">y diseñador</span> freelance.</h2>
+    <h1><em>Soy Jose Dominguez.</em></h1>
+    <h2><span class="programador">Pro</span>gramador y diseñador freelance.</h2>
     <img class="bottom-cloud" src="Images/cloud.png" alt="cloud-image">
     <img src="Images/mountain.png" alt="mountain-image">
   </div>
   <div class="middle-container">
     <div class="profile">
-      <img src="Images/josedominguez.png" alt="josedominguez">
-      <h2>Hola.</h2>
-      <p>Soy Jose, un desarrollador de las Palmas de Gran Canaria y diseñador freelance a tiempo completo.</p>
-      <p>Adoro la programación y todo tipo de artes gráficos.</p>
+      <img src="Images/josedominguez.png" class="josedominguez" alt="josedominguez">
+      <h2>Hola</h2>
+      <p class="intro">Soy Jose, un desarrollador de las Palmas de Gran Canaria y diseñador freelance a tiempo completo.Adoro la programación y todo tipo de artes gráficos.</p>
     </div>
     <hr>
     <div class="skills">
@@ -34,7 +33,7 @@
         <p>Llevo algunos años diseñando pixel-arts, dibujos de modo profesional y desarrollando código de manera autonoma.</p>
       </div>
       <div class="skill-row">
-        <img class="chilies" src="Images/chillies.png" alt="chillies">
+        <img class="chillies" src="Images/chillies.png" alt="chillies">
         <h3>Poniendole sabor a tus encargos</h3>
         <p>Como desarrollador, mi objetivo es que se plasme fielmente lo que mis clientes desean.</p>
       </div>
@@ -43,19 +42,20 @@
     <div class="contactame">
       <h2>¡Dame un toque!</h2>
       <h3>Si tienes algun encargo o pregunta, ni lo dudes. Ponte en contacto conmigo.</h3>
-      <p>Me comunicare contigo, a la mayor brevedad posible</p>
+      <p class="contacto-mensaje">Me comunicare contigo, a la mayor brevedad posible</p>
       <a class="btn" href="mailto:lp4elements@gmail.com">CONTACTAME</a>
     </div>
   </div>
 
+<div>
 
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/in/jose-alberto-dominguez-macias/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/lp4elements">Twitter</a>
     <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-    <p>©Jose Dominguez.</p>
+    <p class="copyright">©Jose Alberto Dominguez Macias.</p>
   </div>
-
+</div>
 </body>
 
 </html>
